WebCore/page/GeolocationControllerClient.h
@@ -36,6 +36,11 @@ public:
 
     virtual void startUpdating() = 0;
     virtual void stopUpdating() = 0;
+    // FIXME: The V2 Geolocation specification proposes that this property is
+    // renamed. See http://www.w3.org/2008/geolocation/track/issues/6
+    // We should update WebKit to reflect this if and when the V2 specification
+    // is published.
+    virtual void setEnableHighAccuracy(bool) = 0;
     virtual GeolocationPosition* lastPosition() = 0;
 
 protected:
