WebKit/mac/WebCoreSupport/WebGeolocationControllerClient.h
@@ -39,6 +39,7 @@ public:
     void geolocationDestroyed();
     void startUpdating();
     void stopUpdating();
+    void setEnableHighAccuracy(bool) { }
 
     WebCore::GeolocationPosition* lastPosition();
 
